# SFML-snake

./: CMakeLists.txt  README.md
docs/: SFML学习日志.md  oop大作业计划.md  模型.md  项目日志.md
resources/font/retro-pixel-font/: readme.txt
resources/font/retro-pixel-font/arcade/: OFL.txt
resources/font/retro-pixel-font/cute-mono/: OFL.txt
resources/font/retro-pixel-font/cute-prop/: OFL.txt
resources/font/retro-pixel-font/petty-5h/: OFL.txt
resources/font/retro-pixel-font/thick/: OFL.txt
src/: snake_test.cpp  tetris.cpp  tetris.hpp  utils.cpp  utils.hpp
src/UI/: IUIComponent.hpp  button.cpp  button.hpp
src/entity/: food.cpp  food.hpp  foodManager.cpp  foodManager.hpp  snake.cpp  snake.hpp  snakeManager.cpp  snakeManager.hpp
src/screen/: IScreen.hpp  deathScreen.cpp  deathScreen.hpp  gameScreen.cpp  gameScreen.hpp  pauseScreen.cpp  pauseScreen.hpp  screenManager.cpp  screenManager.hpp  startScreen.cpp  startScreen.hpp
src/utils/: Constants.cpp  constants.hpp  utils.cpp
